--- a/style.css
+++ b/style.css
@@ -76,13 +76,14 @@ label {
 	margin-bottom: 10px;
 }
 
-.input-box, .submit-button {
+.input-box, .submit-button, .restart-button {
 	border: 0;
 	border-radius: 5px;
 	padding: 0 25px;
 	display: inline-block;
 	vertical-align: top;
 	margin-bottom: 20px;
+	font-size: 110%;
 }
 
 .input-box {
@@ -91,29 +92,29 @@ label {
 	width: 90%;
 }
 
-.submit-button {
+.submit-button, .restart-button {
 	height: 55px;
-	background-color: #5BA362;
-	box-shadow: 0 6px #3F7244;
 	transition: all 0.1s;
 	-webkit-transition: all 0.1s;
-	width: 90%;
 }
 
-.submit-button:active {
-	box-shadow: none;
-	transform: translateY(6px);
+.submit-button {
+	background-color: #5BA362;
+	box-shadow: 0 6px #3F7244;
+	width: 90%;
 }
 
 .restart-button {
 	display: block;
-	font-size: 125%;
-	border: 0;
-	padding: 15px;
-	border-radius: 5px;
 	color: #fff;
 	background-color: #303963;
-	margin: 0 auto;
+	box-shadow: 0 6px #212745;
+	margin: 0 auto 50px;
+}
+
+.submit-button:active, .restart-button:active {
+	box-shadow: none;
+	transform: translateY(6px);
 }
 
 main {
@@ -143,7 +144,7 @@ main {
 }
 
 .movie-card:hover {
-	box-shadow: 0 0 25px 0 #000;
+	box-shadow: 0 0 15px 0 #000;
 	border: 5px solid #5BA362;
 }
 
