added responsive step for large screens, things were looking smushed on my desktop monitor

--- a/masonry-cards.css
+++ b/masonry-cards.css
@@ -24,3 +24,13 @@
 	}
 
 }
+
+/* large desktop version */
+@media only screen and (min-width: 1000px) {
+
+	.masonry {
+		column-count: 3;
+		-webkit-column-count: 3;
+	}
+
+}
