--- a/style.css
+++ b/style.css
@@ -252,3 +252,12 @@ footer a, footer a:link, footer a:visited, footer a:active {
 	}
 
 }
+
+/* large desktop version */
+@media only screen and (min-width: 1000px) {
+
+	.header-container, main {
+		max-width: 1400px;
+	}
+
+}
